[gd_scene load_steps=10 format=2]

[ext_resource path="res://Tasks/cube/defaultcubetaskBG.png" type="Texture" id=1]
[ext_resource path="res://Tasks/cube/defaultcube.png" type="Texture" id=2]
[ext_resource path="res://Tasks/cube/TaskSquare.png" type="Texture" id=3]
[ext_resource path="res://Font/UbuntuMonoFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Interfaz/StyleBoxHover.tres" type="StyleBox" id=5]
[ext_resource path="res://Interfaz/StyleBoxPressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Interfaz/StyleBox.tres" type="StyleBox" id=7]
[ext_resource path="res://Tasks/DefaultCubeTask.gd" type="Script" id=8]
[ext_resource path="res://Tasks/X.png" type="Texture" id=9]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="defaultcubetaskBG" type="Sprite" parent="CenterContainer"]
position = Vector2( 23.9727, 18.8657 )
scale = Vector2( 0.852307, 0.852307 )
texture = ExtResource( 1 )

[node name="defaultcube" type="Sprite" parent="CenterContainer/defaultcubetaskBG"]
position = Vector2( 0.772888, 7.69217 )
scale = Vector2( 1.47531, 1.47531 )
texture = ExtResource( 2 )

[node name="TaskSquare" type="Sprite" parent="CenterContainer"]
position = Vector2( 20.7021, 14.4434 )
scale = Vector2( 1.05784, 1.05784 )
texture = ExtResource( 3 )

[node name="DeleteButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = 131.157
margin_right = 95.0
margin_bottom = 200.157
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "DELETE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
playback_speed = 2.0
playback/speed = 2.0

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.973
margin_bottom = 52.973
custom_fonts/font = ExtResource( 4 )
text = "Task completed!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 221.514
margin_top = -284.378
margin_right = 292.514
margin_bottom = -208.378
icon = ExtResource( 9 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
